chore: adjustment send otp and verify otp. and update docs
