# internal/services/otp/type.go
@@ -4,16 +4,15 @@ import "github.com/mini-e-commerce-microservice/user-service/internal/util/primi
 
 type SendOtpInput struct {
 	Usecase            primitive.OtpUseCase
-	UserID             int64
 	Type               primitive.OtpType
 	DestinationAddress string
 }
 
 type VerifyOtpInput struct {
-	Usecase primitive.OtpUseCase
-	Type    primitive.OtpType
-	Code    string
-	UserID  int64
+	Usecase            primitive.OtpUseCase
+	Type               primitive.OtpType
+	DestinationAddress string
+	Code               string
 }
 
 type VerifyOtpOutput struct {
